Implement simple pathing for units; add a button for spawning a new unit; add listener for clicks on the map (a click now changes the tile); refactored Code structure (e.g. added GameController)

--- a/prototypes/map+interface/assets/configuration/config.json
+++ b/prototypes/map+interface/assets/configuration/config.json
@@ -2,9 +2,10 @@
     "bgColor": 5592405,
     "mapFilename": "assets/maps/test1.txt",
     "tileSize": 32,
+    "autoresize": true,
     "textureFilenames": ["assets/images/spritesheets.json", {
         "name": "bunny",
         "url": "assets/images/bunny.png"
     }],
-    "scripts": ["js/models/units.js", "js/models/map.js", "js/models/textures.js", "js/controller/search.js", "js/controller/renderer.js"]
+    "scripts": ["js/models/units.js", "js/models/map.js", "js/models/textures.js", "js/controller/search.js", "js/controller/renderer.js", "js/controller/game.js"]
 }
