Add tower class; implement a prototype of a 'build tool' (the tower aligns itself to the grid/tiles)

--- a/prototypes/map+interface/assets/configuration/config.json
+++ b/prototypes/map+interface/assets/configuration/config.json
@@ -8,6 +8,7 @@
         "url": "assets/images/bunny.png"
     }],
     "scripts": ["js/models/units.js",
+        "js/models/tower.js",
         "js/models/map.js",
         "js/models/textures.js",
         "js/controller/search.js",
